--- a/smart-blood-bank/src/main/resources/application.properties
+++ b/smart-blood-bank/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=9090
 spring.application.name=Smart Blood Bank System
 
 # Database Configuration (MySQL)
-spring.datasource.url=jdbc:mysql://localhost:3306/smartbloodbank_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=122333
+spring.datasource.url=jdbc:mysql://localhost:3306/smartbloodbank?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USERNAME}
 
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
