--- a/smart-blood-bank/src/main/resources/application.properties
+++ b/smart-blood-bank/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 spring.application.name=Smart Blood Bank System
 
 # Database Configuration (MySQL)
-spring.datasource.url=jdbc:mysql://localhost:3306/smartbloodbank?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=${MYSQL_URL}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.username=${DB_USERNAME}
 
