--- a/smart-blood-bank/src/main/resources/application.properties
+++ b/smart-blood-bank/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 spring.application.name=Smart Blood Bank System
 
 # Database Configuration (MySQL)
-spring.datasource.url=${MYSQL_URL}
+spring.datasource.url=${DB_URL}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.username=${DB_USERNAME}
 
@@ -14,7 +14,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Thymeleaf Configuration
 spring.thymeleaf.cache=false
