--- a/smart-blood-bank/src/main/resources/application.properties
+++ b/smart-blood-bank/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 spring.application.name=Smart Blood Bank System
 
 # Database Configuration (MySQL)
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/smartbloodbank?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
