--- a/smart-blood-bank/src/main/resources/application.properties
+++ b/smart-blood-bank/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 spring.application.name=Smart Blood Bank System
 
 # Database Configuration (MySQL)
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
